# rust-os

./: .gitignore  .gitmodules  .rustc_info.json  Cargo.toml  LICENSE.txt  README.md
kernel/: Cargo.toml  rust-toolchain.toml  x86_64-os.json
kernel-builder/: Cargo.toml  rust-toolchain.toml
kernel-builder/src/: main.rs
kernel/.cargo/: config.toml
kernel/src/: backtrace.rs  global_state.rs  init.rs  input.rs  log.rs  main.rs  serial.rs
kernel/src/acpi/: fadt.rs  io_apic.rs  local_apic.rs  madt.rs  mod.rs  rsdp.rs  rsdt.rs
kernel/src/acpi/fadt/: generic_address_structure.rs
kernel/src/acpi/local_apic/: ipi.rs  lvt.rs
kernel/src/allocator/: linked_list_allocator.rs  list_node.rs  mod.rs  tests.rs
kernel/src/cpu/: frame_allocator.rs  gdt.rs  idt.rs  interrupt_controllers.rs  mod.rs
kernel/src/cpu/ps2/: devices.rs  mod.rs
kernel/src/devices/: mod.rs
kernel/src/graphics/: font_const.rs  framebuffer.rs  mod.rs
kernel/src/memory/: frame_allocator.rs  idt.rs  mod.rs
kernel/src/memory/allocator/: linked_list_allocator.rs  list_node.rs  mod.rs  tests.rs
kernel/src/panic/: backtrace.rs  mod.rs
kernel/src/pci/: bar.rs  classcodes.rs  devices.rs  mod.rs  msi.rs  registers.rs
kernel/src/pci/capability_registers/: capability.rs  capability_const.rs  capability_mut.rs  mod.rs  msi.rs  msi_const.rs  msi_mut.rs  msix.rs  msix_const.rs  msix_mut.rs
kernel/src/pci/drivers/: mod.rs
kernel/src/pci/drivers/usb/: mod.rs
kernel/src/pci/drivers/usb/xhci/: capability_registers.rs  dcbaa.rs  doorbell.rs  init.rs  interrupter.rs  mod.rs  runtime_registers.rs  scratchpad.rs
kernel/src/pci/drivers/usb/xhci/contexts/: device_context.rs  endpoint_context.rs  input_context.rs  mod.rs  slot_context.rs
kernel/src/pci/drivers/usb/xhci/device_context/: endpoint_context.rs  mod.rs  slot_context.rs
kernel/src/pci/drivers/usb/xhci/operational_registers/: mod.rs  port_registers.rs
kernel/src/pci/drivers/usb/xhci/registers/: capability.rs  dcbaa.rs  doorbell.rs  interrupter.rs  mod.rs  runtime.rs  scratchpad.rs
kernel/src/pci/drivers/usb/xhci/registers/capability/: extended.rs  mod.rs  supported_protocol.rs
kernel/src/pci/drivers/usb/xhci/registers/operational/: mod.rs  port_registers.rs
kernel/src/pci/drivers/usb/xhci/tasks/: mod.rs  port_status_change.rs
kernel/src/pci/drivers/usb/xhci/trb/: command_ring.rs  event_ring.rs  link.rs  mod.rs  normal.rs  software_driven_rings.rs
kernel/src/pci/drivers/usb/xhci/trb/command/: address_device.rs  configure_endpoint.rs  mod.rs  slot.rs
kernel/src/pci/drivers/usb/xhci/trb/event/: command_completion.rs  mod.rs  port_status_change.rs
kernel/src/pci/drivers/usb/xhci/trb/transfer/: mod.rs  normal.rs
kernel/src/scheduler/: mod.rs
kernel/src/tests/: mod.rs  serial.rs
kernel/src/util/: bitfield_enum.rs  byte_align_ints.rs  generic_mutability.rs  iter_switch.rs  iterator_list_debug.rs  mod.rs
kernel/src/vga/: mod.rs
src/: global_state.rs  main.rs
src/memory/: allocator.rs  frame_allocator.rs  gdt.rs  idt.rs  mod.rs
src/memory/allocator/: linked_list_allocator.rs  list_node.rs  tests.rs
src/tests/: mod.rs  serial.rs
src/vga/: colour.rs  macros.rs  mod.rs  tests.rs
