[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"

# For getting output of tests
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
# Debug device for exiting system after running tests
test-args = [
    # Add a fake device to allow easy exiting with a status code
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    # Redirect serial out to stdout
    "-serial", "stdio",
    # Don't display a window
    "-display", "none",
]
test-success-exit-code = 33