[package]
name = "kernel-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.11"
bootloader-boot-config = "0.11"
clap = {version="4.0", features=["derive"]}
rayon = "1.8"

# The bootloader crate has a bug where it fails to create images if the 
# kernel is too large. This patches the dependency to a git submodule which
# has a fix for the bug.
[patch.crates-io]
bootloader = { path = "../bootloader" }
bootloader-boot-config = { path = "../bootloader/common/config" }   