[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For compiling the kernel to a bootable image
bootloader_api = "0.11"
# For volatile reads/writes to memory mapped IO
volatile = "0.2.6"
# For a #[no_std] mutex implementation
spin = "0.5.2"

# For x86_64 specific tasks, like IDT, GDT
x86_64 = "0.14.2"
# For configuring the interrupt controller
pic8259 = "0.10.1"
# For converting scancodes to characters
pc-keyboard = "0.5.0"

# For the kernel heap
linked_list_allocator = "0.10"

# For getting output of tests
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
# Debug device for exiting system after running tests
test-args = [
    # Add a fake device to allow easy exiting with a status code
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    # Redirect serial out to stdout
    "-serial", "stdio",
    # Don't display a window
    "-display", "none",
]
test-success-exit-code = 33