[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For compiling the kernel to a bootable image
bootloader_api = "0.11"
# For a #[no_std] mutex implementation
spin = "0.9"

# For x86_64 specific tasks, like IDT, GDT
x86_64 = "0.14"
# For configuring the interrupt controller
pic8259 = "0.10.1"
# For converting scancodes to characters
pc-keyboard = "0.7"

# For the kernel heap
linked_list_allocator = "0.10"

# For floating point functions without std
libm = "0.2"

# For sending print! to the host when running under qemu
uart_16550 = "0.2.0"

bitfield-struct = "*"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# For the character buffer
[dependencies.crossbeam-queue]
version = "0.3"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.4"
default-features = false