[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For compiling the kernel to a bootable image
bootloader_api = "0.11"
# For a #[no_std] mutex implementation
spin = "0.9"

# For x86_64 specific tasks, like IDT, GDT
x86_64 = "0.14"
# For configuring the interrupt controller
pic8259 = "0.10.1"
# For converting scancodes to characters
pc-keyboard = "0.7"

# For floating point functions without std
libm = "0.2"

# For sending print! to the host when running under qemu
uart_16550 = "0.3.0"

# For building nicer APIs around hardware registers
bitfield-struct = "*"
# For dealing with memory mapped IO
volatile = "0.5"

# For logging
log = "*"

acpica-bindings = { version = "0.1", features = ["x86_64"] }

gimli = { version = "0.28", default-features = false, features = ["read-core", "read"] }
object = { version = "0.32", default-features = false, features = ["read_core", "elf"] }
addr2line = { version = "0.21", default-features = false}

# For handling async code
[dependencies.futures]
version = "*"
default-features = false
features = ["async-await"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# For the character buffer
[dependencies.crossbeam-queue]
version = "0.3"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.4"
default-features = false
